[gd_scene load_steps=4 format=3 uid="uid://brq3ils7l4hqd"]

[ext_resource type="PackedScene" uid="uid://b365a65y34f6y" path="res://Entity/Entity.tscn" id="1_av1v5"]
[ext_resource type="Script" path="res://Entity/Player/player.gd" id="2_3st6k"]
[ext_resource type="PackedScene" uid="uid://gp6i1b8upr4v" path="res://Weapon/weapon.tscn" id="3_sntw2"]

[node name="Player" instance=ExtResource("1_av1v5")]
z_index = 2
script = ExtResource("2_3st6k")
color = Color(0, 0.666667, 0, 1)
ai = false

[node name="weapon1" parent="." index="2" instance=ExtResource("3_sntw2")]
modulate = Color(1, 0, 1, 1)
scale = Vector2(3, 3)

[node name="weapon2" parent="." index="3" instance=ExtResource("3_sntw2")]
modulate = Color(1, 1, 0, 1)
rotation = 2.29511
scale = Vector2(3, 3)

[node name="InterAttackTimer" type="Timer" parent="." index="4"]
wait_time = 0.932

[connection signal="timeout" from="InterAttackTimer" to="." method="_on_inter_attack_timer_timeout"]
